kubectl-edit-s1927.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.solo.io/v1","kind":"VirtualService","metadata":{"annotations":{},"creationTimestamp":"2020-10-20T14:40:43Z","generation":10,"name":"petstore","namespace":"gloo-system","resourceVersion":"3483","selfLink":"/apis/gateway.solo.io/v1/namespaces/gloo-system/virtualservices/petstore","uid":"33262739-ccb5-4acc-b72c-f25284479ab0"},"spec":{"virtualHost":{"domains":["*"],"options":{"stagedTransformations":{"early":{"requestTransforms":[{"clearRouteCache":true,"requestTransform [...]
  creationTimestamp: "2020-10-20T14:40:43Z"
  generation: 20
  name: petstore
  namespace: gloo-system
  resourceVersion: "5594"
  selfLink: /apis/gateway.solo.io/v1/namespaces/gloo-system/virtualservices/petstore
  uid: 33262739-ccb5-4acc-b72c-f25284479ab0
spec:
  virtualHost:
    domains:
    - '*'
    options:
      stagedTransformations:
        early:
          responseTransforms:
          - responseTransformation:
              transformationTemplate:
                passthrough: {}
                headers: 
                  server:
                    text: ''
          requestTransforms:
          - clearRouteCache: true
            requestTransformation:
              transformationTemplate:
                extractors:
                  originalAuthority:
                    header: :authority
                    regex: .*
                  pathGroupOne:
                    header: :path
                    regex: ^\/([^\/]*)\/.*$
                    subgroup: 1
                  pathGroupTwo:
                    header: :path
                    regex: ^\/[^\/]*\/(.*)$
                    subgroup: 1
                headers:
                  :authority:
                    text: '{{ pathGroupOne }}.{{ originalAuthority }}'
                  :path:
                    text: /{{ pathGroupOne }}.{{ originalAuthority }}/{{ pathGroupTwo
                      }}
                passthrough: {}
    routes:
    - matchers:
      - headers:
        - name: :authority
          value: application.example.com
        prefix: /
      routeAction:
        single:
          upstream:
            name: default-http-echo-b-5678
            namespace: gloo-system
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-http-echo-a-5678
            namespace: gloo-system
status:
  reportedBy: gateway
  state: 1
  subresourceStatuses:
    '*v1.Proxy.gloo-system.gateway-proxy':
      reportedBy: gloo
      state: 1
